# httpstatus

./: README.md  main.py  pyproject.toml  setup.py
.github/workflows/: python-package.yml
httpstatus/: http_status.py  http_status_enum.py  httpstatus.py  status.py
tests/: test_http_status.py
